samples/_failures_safe/1761043539_c2205c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d1fa758d.c: In function ‘main’:
./samples/SAFE/__tmp_d1fa758d.c:188:5: error: expected expression at end of input
  188 |     for (int i = 0; i < token_count;
      |     ^~~
./samples/SAFE/__tmp_d1fa758d.c:188:5: error: expected declaration or statement at end of input
